# schedule-gen-web

./: .readme.md.swp  Cargo.toml  nohup.out  readme.md
public/assets/: .js.js.swo  js.js
src/: api_controller.rs  main.rs
src/contracts/: mod.rs
templates/: index.tpl  index.tpl.html
